--- a/src/index.css
+++ b/src/index.css
@@ -5,18 +5,18 @@ body {
     min-width: 250px;
 }
 
-/* Include the padding and border in an element's total width and height */
+/* Inclui o preenchimento e a borda na largura e altura no total de um elemento */
 * {
     box-sizing: border-box;
 }
 
-/* Remove margins and padding from the list */
+/* Removi as margens e preenchimento da Lista */
 ul {
     margin: 0;
     padding: 0;
 }
 
-/* Style the list items */
+/* Estilizei os itens da Lista */
 ul li {
     cursor: pointer;
     position: relative;
@@ -26,31 +26,31 @@ ul li {
     font-size: 18px;
     transition: 0.2s;
 
-    /* make the list items unselectable */
+    /* Tornei os itens da lista NÃO selecionáveis */
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
 }
 
-/* Set all odd list items to a different color (zebra-stripes) */
+/* Defini todos os itens da Lista para uma cor diferente */
 ul li:nth-child(odd) {
     background: #f9f9f9;
 }
 
-/* Darker background-color on hover */
+/* Coloquei uma cor de fundo mais escura ao passar o mouse por cima */
 ul li:hover {
     background: #ddd;
 }
 
-/* When clicked on, add a background color and strike out text */
+/* Coloquei para quando clicar, adicionar uma cor de fundo e riscar o texto */
 ul li.checked {
     background: #888;
     color: #fff;
     text-decoration: line-through;
 }
 
-/* Add a "checked" mark when clicked on */
+/* Adicionei um símbolo de ✔️ ao clicar na Atividade da Lista */
 ul li.checked::before {
     content: "";
     position: absolute;
@@ -64,7 +64,7 @@ ul li.checked::before {
     width: 7px;
 }
 
-/* Style the close button */
+/* Estilizei o botão de EXCLUIR atividade */
 .close {
     position: absolute;
     right: 0;
@@ -77,7 +77,7 @@ ul li.checked::before {
     color: white;
 }
 
-/* Style the header */
+/* Estilizei o cabeçalho */
 .header {
     background-color: #f44336;
     padding: 30px 40px;
@@ -85,14 +85,14 @@ ul li.checked::before {
     text-align: center;
 }
 
-/* Clear floats after the header */
+/* Limpei o texto após o cabeçalho */
 .header:after {
     content: "";
     display: table;
     clear: both;
 }
 
-/* Style the input */
+/* Estilizei a entrada de texto do USUÁRIO */
 input {
     margin: 0;
     border: none;
@@ -103,7 +103,7 @@ input {
     font-size: 16px;
 }
 
-/* Style the "Add" button */
+/* Estilizei o botão de ADICIONAR */
 .addBtn {
     padding: 10px;
     width: 25%;
